@@ -1,0 +1,15 @@
+beforeEach(function() {
+  this.addMatchers({
+
+    toContainOnce: function(value) {
+      var actual = this.actual;
+      var containsOnce = false;
+      if (actual) {
+        var firstFoundAt = actual.indexOf(value);
+        containsOnce = firstFoundAt!=-1 && firstFoundAt == actual.lastIndexOf(value);
+      }
+      return containsOnce;
+    }
+
+  });
+});
