@@ -1,0 +1,7 @@
+require([
+  '../src/toBe',
+  '../src/toThrow',
+  '../src/toContain',
+  '../src/toStartEndWith',
+  '../src/toHave',
+]);
