@@ -5,3 +5,4 @@ v0.1.2
 * Added toBeOneOf(), where actual is checked against a set of expected values.
 * Added toBeCloseToOneOf()
 * Added toStartWithEither()
+* separated all matchers+tests into reasonable files
